# hal

./: README.md  hal.py  pyproject.toml
cookbooks/: haystack-rag.py
