[tool.poetry]
name = "hal"
version = "0.1.0"
description = "A local chatbot"
authors = ["Mike Brinker <themikejr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "0.27.0"
rich = "^13.9.1"
pyperclip = "^1.9.0"
sentence-transformers = "^3.1.1"
faiss-cpu = "^1.8.0.post1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
